--- a/grasa_event_locator/templates/search/search.html
+++ b/grasa_event_locator/templates/search/search.html
@@ -1,45 +1,7 @@
 {% include "header.php" %}
-{% comment %}
-{% block content %}
-    <h2>Search</h2>
-
-    <form method="get" action=".">
-        <table>
-            {{ form.as_table }}
-            <tr>
-                <td>&nbsp;</td>
-                <td>
-                    <input type="submit" value="Search">
-                </td>
-            </tr>
-        </table>
-
-        {% if query %}
-            <h3>Results</h3>
-
-            {% for result in page.object_list %}
-                <p>
-                    <a href="{% url 'event_page' result.object.id %}">{{ result.object.title }}</a>
-                </p>
-            {% empty %}
-                <p>No results found.</p>
-            {% endfor %}
-
-            {% if page.has_previous or page.has_next %}
-                <div>
-                    {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
-                    |
-                    {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
-                </div>
-            {% endif %}
-        {% else %}
-            {# Show some example queries to run, maybe query syntax, something else? #}
-        {% endif %}
-    </form>
-    {% endblock %}
-    {% endcomment %}
-    <!-- Homepage -->
+<!-- Homepage -->
 <div class="container home-container">
+    <form method="get" action=".">
     <div class="row">
     <!-- most outer row-->
         <div class="col-sm-3 filter-col">
@@ -65,19 +27,18 @@
             <div class="row">
             <!-- search bar row-->
                 <div class="input-group mb-3 search-bar">
-                <form method="get" action=".">
+                
                   {{ form.q }}
                   <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="submit" id="button-addon2" aria-label="Search" value="Search"><i class="fa fa-search" aria-hidden="true"></i></button>
                   </div>
-                </form>
                 </div>
+                {{ form.activities }}
             </div>
             <div class="row">
             <!-- Search Results Row-->
                 <div id="results-box">
-            {% if query %}
-            {% for result in object_list %}
+                {% for result in object_list %}
                     <a href="{% url 'event_page' result.object.id %}"> <div class="card w-100 event-box">
                       <div class="card-body row">
                         <div class="col-sm-6">
@@ -95,12 +56,12 @@
                       </div>
                     </div>
                     <a>
-                    {% endfor %}
-                    {% endif %}
+                {% endfor %}
                 </div>
             </div>
         </div>
     </div>
+    </form>
     <div class="row">
     <!-- map row-->
         <div id="mapid"></div>
@@ -133,7 +94,6 @@
         setTimeout(function() {
             $(".filter-alert").hide();
         }, 2000);
-<<<<<<< HEAD
     }
 
     $( document ).ready(function() {
@@ -151,36 +111,12 @@
             //uncollapse first filter box
             if(i==0){
                 $(".accordion").append("<div class='card'><div class='card-header' id='heading"+name+"'><h2 class='mb-0'><button class='btn btn-link' type='button' data-toggle='collapse' data-target='#collapse"+name+"' aria-expanded='true' aria controls='collapse"+name+"'>"+groupList[i]+"</button></h2></div><div id='collapse"+name+"' class='collapse show' data-parent='#accordionExample'><div class='card-body'></div></div></div>")
-
-=======
-
-    }
-
-    $( document ).ready(function() {
-        //Categories
-        for(var i=0; i<groupList.length; i++){
-
-            //check for group name with spaces
-            var words = groupList[i].split(" ")
-            if(words.length > 1){
-               var name = words[0]
-            }else{
-                var name = groupList[i]
-            }
-
-            //uncollapse first filter box
-            if(i==0){
-                $(".accordion").append("<div class='card'><div class='card-header' id='heading"+name+"'><h2 class='mb-0'><button class='btn btn-link' type='button' data-toggle='collapse' data-target='#collapse"+name+"' aria-expanded='true' aria controls='collapse"+name+"'>"+groupList[i]+"</button></h2></div><div id='collapse"+name+"' class='collapse show' data-parent='#accordionExample'><div class='card-body'></div></div></div>")
-
->>>>>>> Newer search changes
             //add distance
             }else if(name=="Distance"){
                 $(".accordion").append("<div class='card'><div class='card-header' id='heading"+name+"'><h2 class='mb-0'><button class='btn btn-link collapsed' type='button' data-toggle='collapse' data-target='#collapse"+name+"' aria-expanded='true' aria controls='collapse"+name+"'>"+groupList[i]+"</button></h2></div><div id='collapse"+name+"' class='collapse' data-parent='#accordionExample'><div class='card-body'><input class='form-control form-control-sm distance-input' type='text' placeholder='From Address...'></div></div></div>")
             }else{
                 $(".accordion").append("<div class='card'><div class='card-header' id='heading"+name+"'><h2 class='mb-0'><button class='btn btn-link collapsed' type='button' data-toggle='collapse' data-target='#collapse"+name+"' aria-expanded='true' aria controls='collapse"+name+"'>"+groupList[i]+"</button></h2></div><div id='collapse"+name+"' class='collapse' data-parent='#accordionExample'><div class='card-body'></div></div></div>")
             }
-<<<<<<< HEAD
-
         }
 
         //Activity
@@ -207,36 +143,9 @@
 
     });
 
-=======
-
-        }
-
-        //Activity
-        fillCheckBoxes(activityList, "collapseActivity");
-
-        //Transportation
-        fillCheckBoxes(transportationList, "collapseTransportation");
-
-        //Grades Served
-        fillCheckBoxes(gradesList, "collapseGrades");
-
-        //Gender
-        fillCheckBoxes(genderList, "collapseGender");
-
-        //Distance
-        fillCheckBoxes(distanceList, "collapseDistance");
-
-        //Fees
-        fillCheckBoxes(feesList, "collapseFees");
-
-        //Timing
-        fillCheckBoxes(timingList, "collapseTiming");
-
-
-    });
-
->>>>>>> Newer search changes
     function fillCheckBoxes(list, location){
+        $( "#"+location+" .card-body" ).append();
+        {% comment %}
         for(var i=0; i<list.length; i++){
             var words = list[i].split(" ")
             if(words.length > 1){
@@ -246,6 +155,7 @@
             }
             $( "#"+location+" .card-body" ).append( "<div class='form-check'><input class='form-check-input' type='checkbox' value='' id='defaultCheck"+name+i+"'><label class='form-check-label' for='defaultCheck"+name+i+"'>"+list[i]+"</label></div>" );
         }
+        {% endcomment %}
     }
 
     //Leaflet Code
@@ -274,95 +184,6 @@
 
     var marker2 = L.marker([43.0966, -77.6973], {icon: greenIcon}).addTo(mymap);
     marker2.bindPopup("<b>Cooking for Kids</b><br>Henrietta Elementary School<br><a href='event.php'>Details</a></div>");
-
-</script>
-{% include "footer.php" %}
-
-            //check for group name with spaces
-            var words = groupList[i].split(" ")
-            if(words.length > 1){
-               var name = words[0]
-            }else{
-                var name = groupList[i]
-            }
-
-            //uncollapse first filter box
-            if(i==0){
-                $(".accordion").append("<div class='card'><div class='card-header' id='heading"+name+"'><h2 class='mb-0'><button class='btn btn-link' type='button' data-toggle='collapse' data-target='#collapse"+name+"' aria-expanded='true' aria controls='collapse"+name+"'>"+groupList[i]+"</button></h2></div><div id='collapse"+name+"' class='collapse show' data-parent='#accordionExample'><div class='card-body'></div></div></div>")
-
-            //add distance
-            }else if(name=="Distance"){
-                $(".accordion").append("<div class='card'><div class='card-header' id='heading"+name+"'><h2 class='mb-0'><button class='btn btn-link collapsed' type='button' data-toggle='collapse' data-target='#collapse"+name+"' aria-expanded='true' aria controls='collapse"+name+"'>"+groupList[i]+"</button></h2></div><div id='collapse"+name+"' class='collapse' data-parent='#accordionExample'><div class='card-body'><input class='form-control form-control-sm distance-input' type='text' placeholder='From Address...'></div></div></div>")
-            }else{
-                $(".accordion").append("<div class='card'><div class='card-header' id='heading"+name+"'><h2 class='mb-0'><button class='btn btn-link collapsed' type='button' data-toggle='collapse' data-target='#collapse"+name+"' aria-expanded='true' aria controls='collapse"+name+"'>"+groupList[i]+"</button></h2></div><div id='collapse"+name+"' class='collapse' data-parent='#accordionExample'><div class='card-body'></div></div></div>")
-            }
-
-        }
-
-        //Activity
-        fillCheckBoxes(activityList, "collapseActivity");
-
-        //Transportation
-        fillCheckBoxes(transportationList, "collapseTransportation");
-
-        //Grades Served
-        fillCheckBoxes(gradesList, "collapseGrades");
-
-        //Gender
-        fillCheckBoxes(genderList, "collapseGender");
-
-        //Distance
-        fillCheckBoxes(distanceList, "collapseDistance");
-
-        //Fees
-        fillCheckBoxes(feesList, "collapseFees");
-
-        //Timing
-        fillCheckBoxes(timingList, "collapseTiming");
-
-
-    });
-
-    function fillCheckBoxes(list, location){
-        for(var i=0; i<list.length; i++){
-            var words = list[i].split(" ")
-            if(words.length > 1){
-               var name = words[0]
-            }else{
-                var name = list[i]
-            }
-            $( "#"+location+" .card-body" ).append( "<div class='form-check'><input class='form-check-input' type='checkbox' value='' id='defaultCheck"+name+i+"'><label class='form-check-label' for='defaultCheck"+name+i+"'>"+list[i]+"</label></div>" );
-        }
-    }
-
-    //Leaflet Code
-    //init
-    var mymap = L.map('mapid').setView([43.0846, -77.6743], 13);
-    L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
-        attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-        maxZoom: 18,
-        id: 'mapbox.streets',
-        accessToken: 'sk.eyJ1IjoibGRpZG9uYXRvIiwiYSI6ImNrMTdzdmN4YTFqODgzbnBrOHB4ZzJ1dzQifQ.T7D-X5eab-y3J-KIu_WTBw'
-    }).addTo(mymap);
-
-    //markers
-    //testing colors https://github.com/pointhi/leaflet-color-markers
-    var greenIcon = new L.Icon({
-      iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png',
-      shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
-      iconSize: [25, 41],
-      iconAnchor: [12, 41],
-      popupAnchor: [1, -34],
-      shadowSize: [41, 41]
-    });
-
-    var marker = L.marker([43.0846, -77.6743]).addTo(mymap);
-    marker.bindPopup("<div class='leafeventPopup'><b>Soccer Program</b><br>Rochester Middle School<br><a href='event.php'>Details</a></div>").openPopup();
-
-
-    var marker2 = L.marker([43.0966, -77.6973], {icon: greenIcon}).addTo(mymap);
-    marker2.bindPopup("<b>Cooking for Kids</b><br>Henrietta Elementary School<br><a href='event.php'>Details</a></div>");
-
 
 </script>
 {% include "footer.php" %}
