--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -149,8 +149,8 @@ body{
 /*Log-in page styles*/
 .form-signin {
   width: 50%;
-  max-width: 330px;
-  padding: 15px;
+  max-width: 350px;
+  padding: 10px;
   margin: 0 auto;
 }
 
@@ -158,7 +158,7 @@ body{
   position: relative;
   box-sizing: border-box;
   height: auto;
-  padding: 10px;
+  padding: 15px;
   font-size: 16px;
 }
 .form-signin .form-control:focus {
@@ -213,7 +213,7 @@ body{
 
 
 /* Style the submit button */
-.form-changePW input[type=submit] {
+.form-changePW button[type=submit] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
@@ -265,7 +265,7 @@ body{
 .form-register {
   width: 50%;
   max-width: 330px;
-  padding: 15px;
+  padding: 10px;
   margin: 0 auto;
 }
 
@@ -425,6 +425,42 @@ span.subhead::before, span.subhead::after {
 	position:relative;
 }
 
+/*Styles for HomePage title*/
+.jumbotron {
+	background-color: #EFFBEF;
+	position: relative;
 
+}
 
+.jumbotron p {
+	text-align:center;
+}
 
+/*Styles for alert messages for register.php and login.php*/
+.alert-msg {
+	
+	color: red;
+	padding-top: none;
+}
+
+/* Style for verticle line btw column on registration page */
+.border-right {
+    border-right: 1px solid black;
+}
+
+/*Styles for Contact section on Registration page */
+.register-container {
+	text-align: left;
+    /*border: solid 1px lightgray;    */
+    padding:5px;
+    padding-left:20px;
+	padding-right:20px;
+	margin-top:40px;
+}
+
+.register-contact-body{	
+    padding-left:50px;
+	padding-right:20px;
+	padding-top:20px;
+	text-align:left;
+}
