--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -261,14 +261,20 @@ body{
 
 
 /*Registration page styles*/
-
+.regHelpBtn{
+    padding:0;
+}
 .form-register {
-  width: 50%;
-  max-width: 330px;
   padding: 10px;
   margin: 0 auto;
+  width: 100%;
+  max-width: 800px;
 }
-
+.registerBtnRow{
+    width: 50%;
+    max-width: 330px;
+    margin: 0 auto;
+}
 .form-register .form-control:focus {
   z-index: 2;
 }
