--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -30,8 +30,12 @@ body{
     width: 100%;
     background-color: #f5f5f5;
 }
-
-
+.portalLink a{
+    color: white;
+}
+.portalLink a:hover{
+    color: #28a745;
+}
 /*Home Styles*/
 .home-container, .event-container {
     margin-top: 40px;
@@ -302,6 +306,7 @@ body{
 }
 .changeNameInput{
     visibility: hidden;
+    height: 0;
 }
 
 /*icon width fix*/
@@ -348,6 +353,9 @@ button i.fa{
 @media (max-width: 576px){
     body {
         margin-bottom: 140px;
+    }
+    .noMobile{
+        display: none;
     }
 }
 .pocFieldset{
