--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -257,6 +257,9 @@ body{
 
 .form-reset, .form-signin{
     padding-top: 50px;
+     margin: 0 auto;
+    width: 100%;
+    max-width: 330px;
 }
 
 /*Provider Page Styles*/
